manifests/deploy-flightservice.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: flightservice
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: flight-deployment
    spec:
      containers:
      - name: flightservice-java
        image: flightservice-java:latest
        ports:
          - containerPort: 9080
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: keystores
            mountPath: /etc/wlp/config/keystore
            readOnly: true
          - name: truststores
            mountPath: /etc/wlp/config/truststore
            readOnly: true
          - name: liberty-config
            mountPath: /config/configDropins
      volumes:
        - name: keystores
          secret:
            secretName: mb-keystore
        - name: truststores
          secret:
            secretName: mb-truststore
        - name: liberty-config
          configMap:
            name: liberty-logging-config
            items:
              - key: keystore.xml
                path: defaults/keystore.xml
              - key: logging.xml
                path: defaults/logging.xml
---
apiVersion: v1
kind: Service
metadata:
  name: flight-service
  namespace: default
spec:
  ports:
    - port: 9080
  selector:
    name: flight-deployment
---
##### Flight Database #####
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: flight-db
  name: flight-db
spec:
  ports:
  - name: "27017"
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    service: flight-db
status:
  loadBalancer: {}
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: flight-db
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: flight-db
    spec:
      containers:
      - image: mongo
        name: flight-db
        ports:
        - containerPort: 27017
          protocol: TCP
        resources: {}
      restartPolicy: Always
status: {}
